@@ -1,8 +1,8 @@
 # Config file for tox
 [tox]
 envlist =
-    {py27,py34,py35,py36}-numpy{1.11,1.12,1.13,1.14,1.15},
-    py37-numpy{1.14,1.15},
+    {py27,py34,py35,py36}-numpy{1.11,1.12,1.13,1.14,1.15,1.16},
+    py37-numpy{1.14,1.15,1.16},
     docs
 
 # matrix of test environments
@@ -12,7 +12,8 @@ deps =
     numpy1.12: numpy >= 1.12.0, < 1.13.0
     numpy1.13: numpy >= 1.13.0, < 1.14.0
     numpy1.14: numpy >= 1.14.0, < 1.15.0
-    numpy1.15: numpy >= 1.15.0
+    numpy1.15: numpy >= 1.15.0, < 1.16.0
+    numpy1.16: numpy >= 1.16.0
 commands = python -m unittest tests
 
 # Test html build and doctests
@@ -30,8 +31,8 @@ commands=
 # Setup for Travis build
 [travis]
 os =
-    linux: {py27,py34,py35,py36}-numpy{1.11,1.12,1.13,1.14,1.15}, py37-numpy{1.14,1.15}, docs
-    osx: {py27,py34,py35,py36}-numpy{1.11,1.12,1.13,1.14,1.15}, py37-numpy{1.14,1.15}
+    linux: {py27,py34,py35,py36}-numpy{1.11,1.12,1.13,1.14,1.15,1.16}, py37-numpy{1.14,1.15,1.16}, docs
+    osx: {py27,py34,py35,py36}-numpy{1.11,1.12,1.13,1.14,1.15,1.16}, py37-numpy{1.14,1.15,1.16}
 python =
     2.7: py27
     3.4: py34
